random crash with bmesh boolean modifiers #51539

Closed
opened 2017-05-17 21:59:55 +02:00 by mathieu menuet · 7 comments

System Information
Win 7 x64

Blender Version
Broken: 26b2323189

Short description of error
Files with some modifiers (mostly boolean) often crash randomly. Mostly at render start or render end, but also during modeling.

Exact steps for others to reproduce the error
It's very random, simplifying the file make it work properly apparently, so here is a trace:

# Blender 2.78 (sub 5), Commit date: 2017-05-16 13:36, Hash 26b23231893
 
# backtrace
30: BLI_system_backtrace - 0x415872A0
29: sig_handle_crash_backtrace - 0x3FC2B000
28: sig_handle_crash - 0x3FC2B050
27: windows_exception_handler - 0x3FC2B2D0
26: UnhandledExceptionFilter - 0x76C3BAA0
25: EtwEventSetInformation - 0x76E3E180
24: _C_specific_handler - 0x76DD782C
23: RtlDecodePointer - 0x76DE7DE0
22: RtlUnwindEx - 0x76DD7910
21: KiUserExceptionDispatcher - 0x76E0BA9A
20: failwithmessage - 0x46342D10
19: _RTC_AllocaFailure - 0x46342830
18: _RTC_CheckStackVars2 - 0x463419C0
17: BM_face_split_edgenet - 0x40A809C0
16: face_edges_split - 0x40A8E0C0
15: BM_mesh_intersect - 0x40A8AD60
14: applyModifier_bmesh - 0x408B6170
13: applyModifier - 0x408B6900
12: modwrap_applyModifier - 0x40D510C0
11: mesh_calc_modifiers - 0x40F31060
10: mesh_build_data - 0x40F33810
9: makeDerivedMesh - 0x40F29150
8: BKE_object_handle_data_update - 0x410C3660
7: BKE_object_handle_update_ex - 0x40EA9E70
6: scene_update_object_func - 0x40DAE050
5: task_scheduler_thread_run - 0x415E5620
4: sched_get_priority_max - 0xF2BF12FD
3: sched_get_priority_max - 0xF2BF12FD
2: sched_get_priority_max - 0xF2BF12FD
1: BaseThreadInitThunk - 0x76BB59B0
0: RtlUserThreadStart - 0x76DEA2C0

http://pasteall.org/pic/show.php?id=115636

**System Information** Win 7 x64 **Blender Version** Broken: 26b23231893 **Short description of error** Files with some modifiers (mostly boolean) often crash randomly. Mostly at render start or render end, but also during modeling. **Exact steps for others to reproduce the error** It's very random, simplifying the file make it work properly apparently, so here is a trace: ``` # Blender 2.78 (sub 5), Commit date: 2017-05-16 13:36, Hash 26b23231893 # backtrace 30: BLI_system_backtrace - 0x415872A0 29: sig_handle_crash_backtrace - 0x3FC2B000 28: sig_handle_crash - 0x3FC2B050 27: windows_exception_handler - 0x3FC2B2D0 26: UnhandledExceptionFilter - 0x76C3BAA0 25: EtwEventSetInformation - 0x76E3E180 24: _C_specific_handler - 0x76DD782C 23: RtlDecodePointer - 0x76DE7DE0 22: RtlUnwindEx - 0x76DD7910 21: KiUserExceptionDispatcher - 0x76E0BA9A 20: failwithmessage - 0x46342D10 19: _RTC_AllocaFailure - 0x46342830 18: _RTC_CheckStackVars2 - 0x463419C0 17: BM_face_split_edgenet - 0x40A809C0 16: face_edges_split - 0x40A8E0C0 15: BM_mesh_intersect - 0x40A8AD60 14: applyModifier_bmesh - 0x408B6170 13: applyModifier - 0x408B6900 12: modwrap_applyModifier - 0x40D510C0 11: mesh_calc_modifiers - 0x40F31060 10: mesh_build_data - 0x40F33810 9: makeDerivedMesh - 0x40F29150 8: BKE_object_handle_data_update - 0x410C3660 7: BKE_object_handle_update_ex - 0x40EA9E70 6: scene_update_object_func - 0x40DAE050 5: task_scheduler_thread_run - 0x415E5620 4: sched_get_priority_max - 0xF2BF12FD 3: sched_get_priority_max - 0xF2BF12FD 2: sched_get_priority_max - 0xF2BF12FD 1: BaseThreadInitThunk - 0x76BB59B0 0: RtlUserThreadStart - 0x76DEA2C0 ``` http://pasteall.org/pic/show.php?id=115636
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Campbell Barton was assigned by mathieu menuet 2017-05-17 22:01:43 +02:00
Author

Added subscribers: @ideasman42, @howardt
Removed subscriber: @bliblubli

Added subscribers: @ideasman42, @howardt Removed subscriber: @bliblubli

Please provide a blend-file which can reproduce the error.

Please provide a blend-file which can reproduce the error.
Campbell Barton changed title from random crash with modifiers to random crash with bmesh boolean modifiers 2017-05-18 01:18:22 +02:00
Author

managed to get a reproducible case. But I get the feeling it's only one of many bugs. Will see, here is the file: crash bool3.blend

managed to get a reproducible case. But I get the feeling it's only one of many bugs. Will see, here is the file: [crash bool3.blend](https://archive.blender.org/developer/F602262/crash_bool3.blend)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 208462e424

This issue was referenced by 208462e424d319b3590d0b09cacf0b3807239972
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51539
No description provided.